<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.savent.erp.presentation.viewmodel.SalesViewModel" />
        <import type="android.view.View" />

    </data>
    <androidx.constraintlayout.motion.widget.MotionLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/activity_create_sell_scene"
        tools:context=".presentation.ui.activity.LastSalesActivity">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple_8dp"
            android:padding="4dp"
            android:src="@drawable/ic_round_arrow_back_24"
            android:tint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="back"/>

        <TextView
            android:id="@+id/screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/last_sales"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="@id/back_button"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintTop_toTopOf="@id/back_button" />

        <ImageView
            android:id="@+id/receipt_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/ripple_8dp"
            android:padding="4dp"
            android:src="@drawable/ic_round_receipt_long_24"
            android:tint="@color/black"
            app:layout_constraintStart_toEndOf="@id/screen_title"
            app:layout_constraintTop_toTopOf="@id/screen_title"
            app:layout_constraintBottom_toBottomOf="@id/screen_title"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sales_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@id/revenue_label"
            app:layout_constraintTop_toBottomOf="@id/screen_title" />

        <TextView
            android:id="@+id/revenue_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/revenues"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@id/debts_label"
            app:layout_constraintTop_toBottomOf="@id/sales_recycler"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_regular"
            android:layout_marginEnd="20dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/revenue_label"
            app:layout_constraintTop_toTopOf="@id/revenue_label"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/debts_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_bold"
            android:layout_marginBottom="20dp"
            android:text="@string/debts"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/revenue_label"
            app:layout_constraintStart_toStartOf="@id/revenue_label"
            />

        <TextView
            android:id="@+id/debts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_regular"
            android:layout_marginEnd="20dp"
            android:textColor="@color/red"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/debts_label"
            app:layout_constraintTop_toTopOf="@id/debts_label"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>